--- a/app/src/main/res/layout/activity_reporte_semanal.xml
+++ b/app/src/main/res/layout/activity_reporte_semanal.xml
@@ -41,40 +41,44 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="200dp" />
+        app:layout_constraintGuide_percent="0.2749658" />
+
 
     <Button
         android:id="@+id/btnreporte"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
+        android:backgroundTint="#32DF3A"
         android:text="GENERAR REPORTE"
         android:textColor="@color/black"
-        android:backgroundTint="#32DF3A"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.158"
+        app:layout_constraintHorizontal_bias="0.167"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="390dp"
+        android:layout_height="502dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline"
         tools:context=".ReporteSemanal">
 
         <TableLayout
             android:id="@+id/tabla"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:stretchColumns="*">
+            android:stretchColumns="1">
 
             <!-- Fila de encabezados -->
             <TableRow android:layout_height="85dp">
 
                 <TextView
                     android:layout_column="1"
+                    android:background="@android:color/holo_blue_light"
                     android:padding="5dp"
                     android:text="Nombre de Aula"
                     android:textStyle="bold" />
@@ -82,12 +86,14 @@
                 <TextView
                     android:layout_height="match_parent"
                     android:layout_column="2"
+                    android:background="@android:color/holo_blue_light"
                     android:padding="5dp"
                     android:text="Nombre de Docente"
                     android:textStyle="bold" />
 
                 <TextView
                     android:layout_column="3"
+                    android:background="@android:color/holo_blue_light"
                     android:padding="5dp"
                     android:text="Acción"
                     android:textStyle="bold" />
